; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_interplayvideo.c_ipvideo_format_06_secondpass.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_interplayvideo.c_ipvideo_format_06_secondpass.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*, %struct.TYPE_9__*, i64)* @ipvideo_format_06_secondpass to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipvideo_format_06_secondpass(%struct.TYPE_8__* %0, %struct.TYPE_9__* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca %struct.TYPE_9__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %4, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %34

11:                                               ; preds = %3
  %12 = load i64, i64* %6, align 8
  %13 = trunc i64 %12 to i32
  %14 = sub nsw i32 %13, 49152
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = srem i32 %14, %17
  store i32 %18, i32* %7, align 4
  %19 = load i64, i64* %6, align 8
  %20 = trunc i64 %19 to i32
  %21 = sub nsw i32 %20, 49152
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = sdiv i32 %21, %24
  store i32 %25, i32* %8, align 4
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %28, align 8
  %30 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %8, align 4
  %33 = call i32 @copy_from(%struct.TYPE_8__* %26, %struct.TYPE_9__* %29, %struct.TYPE_9__* %30, i32 %31, i32 %32)
  br label %59

34:                                               ; preds = %3
  %35 = load i64, i64* %6, align 8
  %36 = icmp sgt i64 %35, 0
  br i1 %36, label %37, label %58

37:                                               ; preds = %34
  %38 = load i64, i64* %6, align 8
  %39 = trunc i64 %38 to i32
  %40 = sub nsw i32 %39, 16384
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %42 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = srem i32 %40, %43
  store i32 %44, i32* %7, align 4
  %45 = load i64, i64* %6, align 8
  %46 = trunc i64 %45 to i32
  %47 = sub nsw i32 %46, 16384
  %48 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %49 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = sdiv i32 %47, %50
  store i32 %51, i32* %8, align 4
  %52 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %53 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %54 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %55 = load i32, i32* %7, align 4
  %56 = load i32, i32* %8, align 4
  %57 = call i32 @copy_from(%struct.TYPE_8__* %52, %struct.TYPE_9__* %53, %struct.TYPE_9__* %54, i32 %55, i32 %56)
  br label %58

58:                                               ; preds = %37, %34
  br label %59

59:                                               ; preds = %58, %11
  ret void
}

declare dso_local i32 @copy_from(%struct.TYPE_8__*, %struct.TYPE_9__*, %struct.TYPE_9__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
